<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="example">Hello there!</string>
    <string name="asdasd"><![CDATA[<sender>John Smith</sender>]]></string>
    <string name="text">vertical text</string>
    <string name="result_hint">Here\'s going to be calculus result</string>

    <array name="asd">
        <item>asd</item>
    </array>
    <string name="title_activity_image_load">ImageLoadActivity</string>
    <string name="image_url">Image url</string>
    <string name="load">Load</string>
    <string name="compass_screen">Compass screen</string>
    <string name="sensors_screen">Sensors screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1_title">I\'m test fragment #1</string>
    <string name="fragment_2_title">I\'m test fragment #2</string>
    <string name="fragments_screen">Fragments screen</string>
    <string name="evaluate">Evaluate</string>
    <string name="i_m_inner_fragment">I\'m inner fragment!</string>
    <string name="title_activity_dynamic_fragment">DynamicFragmentActivity</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">Add to Back Stack</string>
    <string name="dynamic_fragments">Dynamic fragments</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="network">Network</string>
    <string name="list">List</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation">Navigation</string>
    <string name="sound_click">Sound click</string>

</resources>
