<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compass_screen" />

    <Button
        android:id="@+id/sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensors_screen" />

    <Button
        android:id="@+id/fragments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragments_screen" />

    <Button
        android:id="@+id/dynamic_fragments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_fragments" />

</LinearLayout>